--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>집 주소:<a href="https://map.naver.com/v5/entry/place/19537421?c=14148280.4912010,4504109.1860645,15,0,0,0,dh" target= "_blank">서울특별시 강남구 세곡동 헌릉로590길100 신동아파밀리에 104동 801호<a/></li>
         <li>전공: 유아교육과</li>
         <li>mbti: <a href="https://namu.wiki/w/ENFP" target="_blank">ENFP</a></li>
-      </ol>
+       </ol>
 
       <h2>심화 프로필</h2>
       <ol>
@@ -30,46 +30,64 @@
       <h2>연예인</h2>
         <h3>과거의 근하's pick</h3>
           <li>'프로듀스'<a href="https://namu.wiki/w/%EC%A0%95%EB%AA%A8(CRAVITY)?from=%EA%B5%AC%EC%A0%95%EB%AA%A8" target="_blank"><u>구정모</u></a></li>
-          <img src="jm.jpg" width="20%">
+          <img src="jm.jpeg" width="20%">
 
 
         <h3>최근 근하's pick</h3>
           <li>'이달의 소녀'<a href="https://namu.wiki/w/%EC%B8%84(%EC%9D%B4%EB%8B%AC%EC%9D%98%20%EC%86%8C%EB%85%80)" target="_blank"><u>츄</u></a></li>
-          <img src="chu.jpg" width="20%">
+          츄도 근하랑 똑같은 enfp라는 사실!
+          <img src="chu.jpeg" width="20%">
+          <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dc632q2u5-Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
 
 
         <h3>논란으로 지워버린 연예인들</h3>
           <h4>아이돌</h4>
           <li>'아이들' <a href="https://namu.wiki/w/%EC%88%98%EC%A7%84" target="_blank">수진</a></li>
+          <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_u5TY7Fp5ec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
           <li>'에이프릴' <a href="https://namu.wiki/w/%EC%9D%B4%EB%82%98%EC%9D%80" target="_blank">나은</a></li>
+          <p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ow9k3uaNmyk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
           <h4>배우</h4>
           <li><a href="https://namu.wiki/w/%EC%84%9C%EC%98%88%EC%A7%80" target="_blank">서예지</a></li>
+          <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NWUuJTKZAKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
           <li><a href="https://namu.wiki/w/%EA%B9%80%EB%8F%99%ED%9D%AC(1999)" target="_blank">김동희</a></li>
+          <p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/uvJHNfAcCqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
 
-      <h2>카카오톡 이모티콘</h2>
+      <h2>근하 최애 카카오톡 이모티콘</h2>
       <ol>
         <li>토심이는 귀여워</li>
-        <img src="to.jpg" width="20%">
-        <li>찐탱리액션 탱탱곰</li>
+        <P>
+        <img src="to.jpeg" width="20%">
+        <P/>
+        <li>찐탱리액션 탱탱곰</li> <br>
         <li>좋아! 나랑 놀자곰!</li>
-        <img src="gom.jpg" width="20%">
+        <img src="gom.jpeg" width="20%">
       </ol>
 
       <h2>기타</h2>
       <ol>
-        <li>공강 요일: 수요일</li>
-        <li>근하의 추천 드라마: 응답하라 1997</li>
-        <img src="응칠.jpg" width="30%">
+        <li>공강 요일: 수요일</li> <br>
+        <li>근하의 추천 드라마: 응답하라 1997</li> <br>
+        <img src="응칠.jpeg" width="30%">
         <li>좋아하는 음식: 초밥, 아이스크림(이상한 나라의 솜사탕, OO마루) </li>
-        <img src="cb.jpg" width="10%">
-        <img src="som.jpg" width="10%">
-        <img src="cherry.jpg" alt="10%">
+        <img src="cb.jpeg" width="10%">
+        <img src="som.jpeg" width="10%">
+        <img src="cherry.jpeg" alt="10%">
         <li>안먹는 음식: 초콜릿</li>
-        <img src="cho.jpg" width="10%">
+        <img src="cho.jpeg" width="10%">
         <li>매력포인트: 귀여움</li>
         <li>즐겨하는 게임: 오버워치, 동물의 숲(포켓캠프)</li>
-        <img src="over.jpg" width="10%">
-        <img src="pocket.jpg" width="10%">
+        <img src="over.jpeg" width="10%">
+        <img src="pocket.jpeg" width="10%">
 
           <h3>하지 말아야 할 것</h3>
           <ol>
@@ -81,7 +99,7 @@
 
 
 <h1>약속!</h1>
-            <img src="promise.jpg" width="20%">
+            <img src="promise.jpeg" width="20%">
           </ol>
   </body>
 </html>
